--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Lampirkan `defer` jika pemanggilan dilakukan dalam <head> -->
     <script defer src="main.js"></script>
 
+    <link rel="shortcut icon" href="Assets/icon/icon.png"/>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
